force-app/main/default/objects/Scope_of_Work__c/Scope_of_Work__c.object-meta.xml
<CustomObject>
    <description>One record per Line of Business (LOB) contracted for a Builder Division Account — the Scope of Work for that service.</description>
    <label>Scope of Work</label>
    <nameField>
        <displayFormat>SOW-{00000}</displayFormat>
        <label>SOW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scopes of Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>