force-app/main/default/objects/Scope_of_Work__c/fields/Aeration__c.field-meta.xml
<CustomField>
    <fullName>Aeration__c</fullName>
    <label>Aeration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>