force-app/main/default/objects/Scope_of_Work__c/fields/Backflow_Required__c.field-meta.xml
<CustomField>
    <fullName>Backflow_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backflow Required</label>
    <type>Checkbox</type>
</CustomField>