force-app/main/default/objects/Scope_of_Work__c/fields/Controller_Brand__c.field-meta.xml
<CustomField>
    <fullName>Controller_Brand__c</fullName>
    <label>Controller Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>