force-app/main/default/objects/Scope_of_Work__c/fields/Fertilization_Included__c.field-meta.xml
<CustomField>
    <fullName>Fertilization_Included__c</fullName>
    <label>Fertilization Included</label>
    <length>100</length>
    <type>Text</type>
</CustomField>