force-app/main/default/objects/Scope_of_Work__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Per-Lot</fullName>
            </value>
            <value>
                <fullName>As-needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>