force-app/main/default/objects/Scope_of_Work__c/fields/Grading_Included__c.field-meta.xml
<CustomField>
    <fullName>Grading_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading Included</label>
    <type>Checkbox</type>
</CustomField>