force-app/main/default/objects/Scope_of_Work__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aqua Service</fullName>
            </value>
            <value>
                <fullName>Finishing Touches</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
                <label>Lawn Care / Maintenance</label>
            </value>
            <value>
                <fullName>Production Landscaping</fullName>
            </value>
            <value>
                <fullName>Refreshes</fullName>
            </value>
            <value>
                <fullName>Signature Builds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>