force-app/main/default/objects/Scope_of_Work__c/fields/Mulch_Spec__c.field-meta.xml
<CustomField>
    <fullName>Mulch_Spec__c</fullName>
    <label>Mulch Spec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>