force-app/main/default/objects/Scope_of_Work__c/fields/Package_Tier__c.field-meta.xml
<CustomField>
    <fullName>Package_Tier__c</fullName>
    <label>Package Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>