force-app/main/default/objects/Scope_of_Work__c/fields/Plant_Palette__c.field-meta.xml
<CustomField>
    <fullName>Plant_Palette__c</fullName>
    <label>Plant Palette</label>
    <length>255</length>
    <type>Text</type>
</CustomField>