force-app/main/default/objects/Scope_of_Work__c/fields/Price_Per_Lot__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Lot__c</fullName>
    <label>Price Per Lot</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>