force-app/main/default/objects/Scope_of_Work__c/fields/Price_Per_Visit__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Visit__c</fullName>
    <label>Price Per Visit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>