force-app/main/default/objects/Scope_of_Work__c/fields/Sod_Type__c.field-meta.xml
<CustomField>
    <fullName>Sod_Type__c</fullName>
    <label>Sod Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>