force-app/main/default/objects/Scope_of_Work__c/fields/Weed_Control__c.field-meta.xml
<CustomField>
    <fullName>Weed_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weed Control</label>
    <type>Checkbox</type>
</CustomField>