force-app/main/default/objects/Scope_of_Work__c/fields/WiFi_Smart_Controller__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Smart_Controller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WiFi Smart Controller</label>
    <type>Checkbox</type>
</CustomField>