force-app/main/default/objects/Scope_of_Work__c/fields/Zone_Count_Avg__c.field-meta.xml
<CustomField>
    <fullName>Zone_Count_Avg__c</fullName>
    <label>Zone Count (avg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>